--- a/vignettes/iSEEtree.Rmd
+++ b/vignettes/iSEEtree.Rmd
@@ -1,32 +1,181 @@
 ---
 title: "iSEEtree: interactive visualisation for microbiome data"
-date: "`r Sys.Date()`"
-package: iSEEtree
+author: 
+  - name: Giulio Benedetti
+    affiliation: University of Turku
+    email: giulio.benedetti@utu.fi
 output:
     BiocStyle::html_document:
         fig_height: 7
         fig_width: 10
-        toc: yes
+        toc: true
+        toc_float: true
         toc_depth: 2
         number_sections: true
+        self_contained: true
+        code_folding: show
+date: "`r doc_date()`"
+package: "`r pkg_ver('iSEEtree')`"
 vignette: >
     %\VignetteIndexEntry{iSEEtree}
     %\VignetteEngine{knitr::rmarkdown}
     %\VignetteEncoding{UTF-8}
 ---
 
-```{r, include = FALSE}
+```{r, include=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
 ```
 
-```{r setup}
+```{r vignetteSetup, echo=FALSE, message=FALSE, warning=FALSE}
+## Track time spent on making the vignette
+startTime <- Sys.time()
+
+## Bib setup
+library(RefManageR)
+
+## Write bibliography information
+bib <- c(
+    R = citation(),
+    BiocStyle = citation("BiocStyle")[1],
+    knitr = citation("knitr")[1],
+    RefManageR = citation("RefManageR")[1],
+    rmarkdown = citation("rmarkdown")[1],
+    sessioninfo = citation("sessioninfo")[1],
+    testthat = citation("testthat")[1],
+    iSEEtree = citation("iSEEtree")[1]
+)
+```
+
+# Basics
+
+## Install iSEEtree
+R is an open-source statistical environment which can be easily modified to
+enhance its functionality via packages. iSEEtree is an R package currently
+available on GitHub. In the future, it may be submitted to the
+[Bioconductor](https://bioconductor.org/) repository for packages. R can be
+installed on any operating system from [CRAN](https://cran.r-project.org/)
+after which you can install iSEEtree by using the following commands in your R
+session:
+
+```{r install, eval=FALSE}
+remotes::install_github("RiboRings/iSEEtree")
+```
+
+## Required knowledge
+iSEEtree is based on many other packages and in particular on those that have implemented the infrastructure needed for dealing with omics data, microbiome
+data and interactive visualisation. That is, packages like
+[_SummarizedExperiment_](https://bioconductor.org/packages/3.18/bioc/html/SummarizedExperiment.html),
+[_TreeSummarizedExperiment_](https://bioconductor.org/packages/3.18/bioc/html/TreeSummarizedExperiment.html),
+[_mia_](https://bioconductor.org/packages/3.18/bioc/html/mia.html),
+[_iSEE_](https://bioconductor.org/packages/3.18/bioc/html/iSEE.html) and
+[_shiny_](https://cran.r-project.org/web/packages/shiny/).
+
+If you are asking yourself the question “Where do I start using Bioconductor?”
+you might be interested in
+[this blog post](https://lcolladotor.github.io/2014/10/16/startbioc/#.VkOKbq6rRuU).
+
+## Asking for help
+As package developers, we try to explain clearly how to use our packages and in
+which order to use the functions. But R and Bioconductor have a steep learning
+curve so it is critical to learn where to ask for help. The blog post quoted
+above mentions some but we would like to highlight the
+[Bioconductor support site](https://support.bioconductor.org/) as the main
+resource for getting help: remember to use the iSEEtree tag and check the
+[older posts](https://support.bioconductor.org/t/iSEEtree/). Other alternatives
+are available such as creating GitHub issues and tweeting. However, please note
+that if you want to receive help you should adhere to the
+[posting guidelines](https://www.bioconductor.org/help/support/posting-guide/).
+It is particularly critical that you provide a small reproducible example and
+your session information so package developers can track down the source of the
+error.
+
+## Citing iSEEtree
+We hope that iSEEtree will be useful for your research. Please use the following information to cite the package and the overall approach. Thank you!
+
+```{r citation}
+## Citation info
+citation("iSEEtree")
+```
+
+# Quick start to iSEEtree
+
+```{r start, message=FALSE, warning=FALSE}
 library(iSEEtree)
+library(mia)
+
+# Import TreeSE
+data("GlobalPatterns", package = "mia")
+tse <- GlobalPatterns
+
+# Agglomerate TreeSE by Genus
+tse_genus <- mergeFeaturesByRank(tse,
+                                 rank = "Genus",
+                                 onRankOnly = TRUE)
+
+# Add relabundance assay
+tse_genus <- transformAssay(tse_genus, method = "relabundance")
+
+# Add PCA
+tse_genus <- scater::runPCA(tse_genus, assay.type = "counts")
+
+# Launch iSEE
+if (interactive()) {
+  iSEE(tse_genus)
+}
 ```
 
-```{r}
-sessionInfo()
+```{r screenfun, eval=!exists("SCREENSHOT"), include=FALSE}
+SCREENSHOT <- function(x, ...) knitr::include_graphics(x)
 ```
 
+```{r screenplot, echo=FALSE, out.width="100%"}
+SCREENSHOT("screenshots/get_started.png", delay=20)
+```
+
+# Reproducibility
+
+```{r createVignette, eval=FALSE}
+## Create the vignette
+library(rmarkdown)
+system.time(render("iSEEtree.Rmd", "BiocStyle::html_document"))
+
+## Extract the R code
+library(knitr)
+knit("iSEEtree.Rmd", tangle = TRUE)
+```
+
+Date the vignette was generated.
+
+```{r reproduce1, echo=FALSE}
+## Date the vignette was generated
+Sys.time()
+```
+
+Wallclock time spent generating the vignette.
+
+```{r reproduce2, echo=FALSE}
+## Processing time in seconds
+totalTime <- diff(c(startTime, Sys.time()))
+round(totalTime, digits = 3)
+```
+
+R session information.
+
+```{r reproduce3, echo=FALSE}
+## Session info
+library(sessioninfo)
+options(width = 120)
+session_info()
+```
+
+# Bibliography
+
+Citations were generated with `r CRANpkg("RefManageR")` `r Citep(bib[["RefManageR"]])`.
+
+```{r vignetteBiblio, results="asis", echo=FALSE, warning=FALSE, message=FALSE}
+## Print bibliography
+PrintBibliography(bib, .opts = list(hyperlink = "to.doc", style = "html"))
+```
