--- a/vignettes/iSEEtree.Rmd
+++ b/vignettes/iSEEtree.Rmd
@@ -166,9 +166,8 @@ R session information.
 
 ```{r reproduce3, echo=FALSE}
 ## Session info
-library(sessioninfo)
 options(width = 120)
-session_info()
+sessionInfo()
 ```
 
 # Bibliography
