--- a/NEWS
+++ b/NEWS
@@ -1,1 +1,9 @@
 Changes in version 0.1.3
+* Moved to microbiome org
+
+Changes in version 0.1.4
+* Added panel tours
+* Prepared for submission
+
+Changes in version 0.1.5
+* Submitted to Bioconductor
