Expand article on metagenomic data

--- a/vignettes/iSEEtree.Rmd
+++ b/vignettes/iSEEtree.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "iSEEtree: interactive visualisation for microbiome data"
+title: "iSEEtree: interactive exploration of microbiome data"
 author: 
   - name: Giulio Benedetti
     affiliation: University of Turku
@@ -61,10 +61,11 @@ respectively.
 
 iSEEtree is meant for new and experienced users alike, who desire to create and
 interact with several graphics for microbiome data, without the need for an
-in-depth knowledge of the underlying mia functionality. Current
-microbiome-specific panels include phylogenetic trees, ordination plots and compositional plots, which can be further explored below in this article. Other
-more generic panels are also reused from the iSEE package and can be
-experimented in [this article](https://isee.github.io/iSEE/articles/basic.html).
+in-depth knowledge of the underlying mia functionality. Current microbiome-specific
+panels include phylogenetic trees, ordination plots and compositional plots,
+which can be further explored below in this article. Other more generic panels
+are also reused from the iSEE package and can be experimented in
+[this article](https://isee.github.io/iSEE/articles/basic.html).
 
 ## Panels
 
